force-app/main/default/objects/ssot__RegulatoryTransactionFeeItem__dlm/fields/ssot__CalculationInfoText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CalculationInfoText__c</fullName>
    <label>Calculation Information</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CalculationInfoText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>