force-app/main/default/objects/ssot__RegulatoryTransactionFeeItem__dlm/fields/ssot__FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__FeeAmount__c</fullName>
    <label>Fee Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FeeAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>