force-app/main/default/objects/ssot__RegulatoryTransactionFeeItem__dlm/fields/ssot__RegulatoryTransactionFeeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulatoryTransactionFeeId__c</fullName>
    <label>Regulatory Transaction Fee</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulatoryTransactionFeeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>