force-app/main/default/objects/ssot__RegulatoryTransactionFeeItem__dlm/fields/ssot__rel_1739512793684_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1739512793684_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulatoryTransactionFeeItem_Regulat_rel</label>
    <referenceTo>ssot__RegulatoryTransactionFee__dlm</referenceTo>
    <relationshipLabel>RegulatoryTransactionFeeItem_Regulat_rel</relationshipLabel>
    <relationshipName>rel_1739512793684_end</relationshipName>
    <type>Lookup</type>
</CustomField>